on load display first bot panel, minor style imrovement

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       display: inline-block;
+      width: 100%;
     }
 
     .reorder-list.ui-sortable li .text {
