log when creating a new bot

--- a/index.html
+++ b/index.html
@@ -461,12 +461,11 @@
             <div class="row-fluid">
               <button name="submit" type="button" class="offset9 btn span3">Bot anlegen</button>
             </div>
+            <div id="createbot_log" class="row-fluid"></div>
           </div>
           <div class="span3">
-            <div class="row-fluid">
               <span>Ein sehr nützlicher Text, der z.B. Informationen über Proxies und andere Einstellungen gibt.</span>
-            </div>
-          </span>
+          </div>
         </div>
       </div>
     </div>
