per module logs + login methods

--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       width: 55%;
+      vertical-align: bottom;
     }
 
     #selected-bot {
@@ -376,7 +377,7 @@
       text-align: right;
     }
 
-    #selected-bot *{
+    #selected-bot * {
      width: auto;
     }
 
@@ -415,10 +416,6 @@
    select {
     background: none;
     border: 1px solid #ddd;
-   }
-
-   .error {
-    border: 1px solid red;
    }
   </style>
 </head>
