--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="css/font-awesome.css" rel="stylesheet">
   <link href="css/smoothness/jquery-ui-1.9.2.custom.css" rel="stylesheet">
   <link href="css/fonts.css" rel="stylesheet">
+
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
   <style type="text/css">
     body {
       font-family: "Source Sans Pro";
@@ -178,8 +180,8 @@
     }
 
     .log {
-      font-family: monospace;
-      font-size: 10pt;
+      font-family: "Ubuntu Mono", monospace;
+      font-size: 9pt;
       color: #ddd;
       background-color: #000;
       height: 15em;
