--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
   <title>UI - NEXT</title>
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/font-awesome.css" rel="stylesheet">
@@ -9,432 +10,38 @@
   <link href="css/fonts.css" rel="stylesheet">
 
   <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
-  <style type="text/css">
-    body {
-      font-family: "Source Sans Pro";
-      margin-top: 5%;
-      background-color: #eee;
-    }
-
-    *:focus {
-        outline: none;
-    }
-
-    a:focus {
-        outline: none;
-    }
-
-    input, button {
-      color: #333;
-    }
-
-    #app {
-      background-color: white;
-      padding: 20px;
-      box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 6px 0px;
-    }
-
-    #app-title {
-      background-color: #333;
-      color: white;
-      box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 6px 0px;
-      font-size: 16px;
-      letter-spacing: 1px;
-    }
-
-    #invader {
-      height: 24px;
-      width: 24px;
-      vertical-align: middle;
-    }
-
-    .placeholder {
-      border:.25em solid rgba(0,0,0,0.9);
-      opacity:.9;
-      border-top:.25em solid rgba(0,0,0,0);
-      border-bottom:.25em solid rgba(0,0,0,0);
-      border-radius:16px;
-      width:1em;
-      height:1em;
-      -o-animation:spin 1s infinite linear;
-      -moz-animation:spin 1s infinite linear;
-      -webkit-animation:spin 1s infinite linear;
-    }
-
-    @-moz-keyframes spin {
-      0% { -moz-transform:rotate(0deg); }
-      100% { -moz-transform:rotate(360deg); }
-    }
-
-    @-webkit-keyframes spin {
-      0% { -webkit-transform:rotate(0deg); }
-      100% { -webkit-transform:rotate(360deg); }
-    }
-
-    @-o-keyframes spin {
-      0% { -o-transform:rotate(0deg); }
-      100% { -o-transform:rotate(360deg); }
-    }
-
-    .reorder-list:empty {
-      border: 1px dashed #aaa;
-    }
-
-    .reorder-list li {
-      cursor: pointer;
-      padding: 4px;
-      margin-top: 2px;
-      margin-bottom: 2px;
-    }
-
-    .reorder-list li:first-child {
-      margin-top: 0;
-    }
-
-    .reorder-list li .text {
-      overflow: hidden;
-      overflow: -moz-hidden-unscrollable;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      display: inline-block;
-      width: 100%;
-    }
-
-    .reorder-list.ui-sortable li .text {
-      max-width: calc(100% - 48px);
-      max-width: -webkit-calc(100% - 48px);
-      max-width: -moz-calc(100% - 48px);
-      max-width: -o-calc(100% - 48px);
-    }
-
-    .remove-handle {
-      float: right;
-      cursor: pointer;
-    }
-
-    .handle {
-      cursor: pointer;
-    }
-
-    .widgetcontainer .row-fluid {
-      margin: 10px 0;
-    }
-
-    .slider-input {
-      margin: 10px 0;
-    }
-
-    .drop-indicator {
-      padding: 4px !important;
-      border: 1px dashed #aaa;
-      text-align: center;
-      text-shadow: 0px 1px 0px rgba(255,255,255,.5);
-      font-size: 17pt;
-      color: #aaa;
-    }
-
-    .input-append button {
-      float: left;
-    }
-
-    .input-append input {
-      float: left;
-      box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -webkit-box-sizing: border-box;
-      -o-box-sizing: border-box;
-      -ms-box-sizing: border-box;
-    }
-
-    .btn {
-      background: #F3F3F3;
-      background: linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -webkit-linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -moz-linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -o-linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -ms-linear-gradient(top,#F5F5F5,#F1F1F1);
-      border: 1px solid #ddd;
-    }
-
-    .btn:hover {
-      border-color: #ccc;
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-    }
-
-    .btn.active {
-      box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
-      background: -webkit-gradient(linear,left top,left bottom,from(#EEEEEE),to(#DEDEDE));
-    }
-
-    input {
-      border: 1px solid #ddd;
-      padding: 0 5px;
-    }
-
-    .input-append input {
-      border-right: 0;
-    }
-
-    .input-append button {
-      margin: 0 !important;
-    }
-
-    .log {
-      font-family: "Ubuntu Mono", monospace;
-      font-size: 9pt;
-      color: #ddd;
-      background-color: #000;
-      height: 15em;
-      padding: 10px;
-      overflow: hidden;
-    }
-
-    .log .error {
-      color: rgb(255, 82, 82);
-    }
-
-    .log .info {
-      color: rgb(82, 255, 103);
-    }
-
-    .log.debug {
-      color: white;
-    }
-
-    .collapsible-header i {
-      display: inline-block;
-      padding: 5px 10px;
-    }
-
-    .collapsible-header .slider-input {
-      margin: 8px 0;
-      margin-right: 20px;
-    }
-
-    .collapsible-header .slider-input.error {
-      background: #ef2929;
-    }
-
-    .collapsible-header .slider-input.info {
-      background: #8ae234;
-    }
-
-    .collapsible-header .slider-input.debug {
-      background: #eee;
-    }
-
-    .rotate {
-      transition: transform 0.25s;
-      -webkit-transition: -webkit-transform 0.25s;
-      -moz-transition: -moz-transform 0.25s;
-      -ms-transition: -ms-transform 0.25s;
-      -o-transition: -o-transform 0.25s;
-
-       transform: rotate(-90deg);
-      -webkit-transform: rotate(-90deg);
-      -moz-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-      -o-transform: rotate(-90deg);
-
-       transform-origin: 50% 50%;
-      -webkit-transform-origin: 50% 50%;
-      -moz-transform-origin: 50% 50%;
-      -ms-transform-origin: 50% 50%;
-      -o-transform-origin: 50% 50%;
-    }
-
-    .derotate {
-      transition: transform 0.25s;
-      -webkit-transition: -webkit-transform 0.25s;
-      -moz-transition: -moz-transform 0.25s;
-      -ms-transition: -ms-transform 0.25s;
-      -o-transition: -o-transform 0.25s;
-
-       transform: rotate(0deg);
-      -webkit-transform: rotate(0deg);
-      -moz-transform: rotate(0deg);
-      -ms-transform: rotate(0deg);
-      -o-transform: rotate(0deg);
-
-       transform-origin: 50% 50%;
-      -webkit-transform-origin: 50% 50%;
-      -moz-transform-origin: 50% 50%;
-      -ms-transform-origin: 50% 50%;
-      -o-transform-origin: 50% 50%;
-    }
-
-    .auto-height {
-      height: auto !important;
-    }
-
-    .ui-accordion-header {
-      padding: 4px;
-      border: 1px solid #333;
-    }
-
-    .ui-accordion-header i {
-      display: inline-block;
-      margin: 0 10px;
-    }
-
-    .ui-accordion-content {
-      padding: 0 10px;
-    }
-
-    .ui-slider {
-      background: #F3F3F3;
-      background: linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -webkit-linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -moz-linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -o-linear-gradient(top,#F5F5F5,#F1F1F1);
-      background: -ms-linear-gradient(top,#F5F5F5,#F1F1F1);
-      border: 1px solid #ddd;
-    }
-
-    .ui-slider-handle {
-      border: 1px solid #444;
-      background: #555;
-      border-radius: 9px;
-    }
-
-    .ui-tabs-nav li {
-      border-style: solid;
-      border-color: #ddd;
-      border-width: 0 1px 0 0;
-    }
-
-    .ui-tabs-nav li.ui-state-active {
-      border-width: 1px 0 1px 1px;
-    }
-
-    .ui-tabs-nav li a {
-      padding: 10px 0 10px 5px;
-      display: block;
-      color: #333;
-    }
-
-    .ui-tabs-nav li a:hover {
-      text-decoration: none;
-    }
-
-    #bot-switcher {
-      color: #333;
-      padding: 5px;
-      cursor: pointer;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      -o-user-select: none;
-      -webkit-user-select: none;
-      user-select: none;
-    }
-
-    #bot-switcher-dd {
-      max-height: 435px;
-      margin-bottom: -435px;
-      overflow-x: hidden;
-      overflow-y: auto;
-      background: #333;
-      color: #fff;
-      position: relative;
-      z-index: 1;
-      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 6px 0px;
-      display: none;
-    }
-
-    #bot-switcher-dd ul {
-      margin-bottom: 0px;
-    }
-
-    #bot-switcher-dd ul li {
-      box-sizing: border-box;
-      border-bottom: 1px solid #666;
-    }
-
-    #bot-switcher-dd ul li:last-child {
-      border: none;
-    }
-
-    #bot-switcher-dd ul li a {
-      color: #ddd;
-      text-decoration: none;
-      display: block;
-      padding: 5px 10px;
-    }
-
-    #bot-switcher-dd ul li a:hover {
-      background: #F3F3F3;
-      color: #333;
-    }
-
-    #bot-switcher-dd ul li a b {
-      display: inline-block;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      width: 55%;
-      vertical-align: bottom;
-    }
-
-    #selected-bot {
-      padding: 5px;
-      text-align: right;
-    }
-
-    #selected-bot * {
-     width: auto;
-    }
-
-     #selected-bot .bs-game {
-      padding-right: 5px;
-     }
-
-    .bs-server {
-      display: inline-block;
-      text-align: right;
-      width: 32%;
-      text-transform:uppercase;
-    }
-
-    .bs-server:before {
-      content: "(";
-      margin-right: -2px;
-    }
-
-    .bs-server:after {
-      content: ")";
-      margin-left: -2px;
-    }
-
-   .bs-game {
-     display: inline-block;
-     width: 10%;
-     text-transform:uppercase;
-   }
-
-   textarea.btn {
-    background: white;
-    resize: none;
-   }
-
-   select {
-    background: none;
-    border: 1px solid #ddd;
-   }
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <div id="app-title" class="row-fluid">
-      <div id="bot-switcher" class="span4 btn">
+      <div id="bot-switcher" class="btn" style="width: 30%">
         <i class="icon-cog"></i><span> BOTS</span>
-        <div class="pull-right">
+        <span class="pull-right">
           <i class="icon-caret-down"></i>
-        </div>
+        </span>
       </div>
-      <div id="selected-bot" class="span8">
+      <div id="selected-bot"></div>
+      <div id="logoutbtn" class="btn logoutbtn hidden-phone" style="min-width: 100px; width: 15%">
+        <i class="icon-signout"></i><span> Abmelden</span>
       </div>
+      <span id="phonemenu-btn" class="visible-phone btn pull-right">
+        <i class="icon-align-justify"></i><span></span>
+      </span>
     </div>
     <div class="row-fluid">
       <div class="span4" id="bot-switcher-dd">
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span4" id="phonemenu-dd">
+<ul class="unstyled">
+<li>
+<a class="logoutbtn" href="#">
+<i class="icon-signout"></i><span> Abmelden</span>
+</a>
+</li>
+<ul>
       </div>
     </div>
     <div id="app">
@@ -442,23 +49,23 @@
         <div class="widgetcontainer row-fluid" data-panelid="createbot" style="display: none">
           <div class="span9">
             <div class="row-fluid">
-              <div class="span2">Spielername</div>
-              <input name="playername" class="span4" type="text" />
-              <div class="span2">Passwort</div>
-              <input name="password" class="span4" type="password" />
+              <div class="span2"><span>Spielername</span></div>
+              <input name="playername" class="span4" type="text">
+              <div class="span2"><span>Passwort</span></div>
+              <input name="password" class="span4" type="password">
             </div>
             <div class="row-fluid">
-              <div class="span2">Skript Paket</div>
+              <div class="span2"><span>Skript Paket</span></div>
               <select name="package" class="span4"></select>
-              <div class="span2">Server</div>
+              <div class="span2"><span>Server</span></div>
               <select name="server" class="span4"></select>
             </div>
             <div class="row-fluid">
-              <div class="span2">Proxies</div>
+              <div class="span2"><span>Proxies</span></div>
               <textarea name="proxies" class="span10 btn" rows="10" placeholder="Proxyliste hier einfügen"></textarea>
             </div>
             <div class="row-fluid">
-              <button name="submit" type="button" class="offset9 btn span3">Bot anlegen</button>
+              <button name="submit" type="button" class="offset9 btn span3">Bot anlegen</sbutton>
             </div>
             <div id="createbot_log" class="row-fluid"></div>
           </div>
@@ -469,9 +76,9 @@
         <div class="widgetcontainer row-fluid" data-panelid="login" style="display: block">
           <div class="span9">
             <div class="row-fluid">
-              <div class="span2">Nutzername</div>
+              <div class="span2"><span>Nutzername</span></div>
               <input name="username" class="span4" type="text" />
-              <div class="span2">Passwort</div>
+              <div class="span2"><span>Passwort</span></div>
               <input name="password" class="span4" type="password" />
             </div>
             <div class="row-fluid">
@@ -487,6 +94,7 @@
   </div>
   <script src="js/jquery-1.8.3.js"></script>
   <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+  <script src="js/jquery.ui.touch-punch.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquerymx-3.2.custom.js"></script>
   <script src="js/jquery.jqote2.js"></script>
@@ -499,10 +107,9 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
-        <div class="span4 column2">
-        </div>
+        <div class="span4 column2 hidden-phone"></div>
         <div class="span4 column3">
           <button type="button" class="span12 btn"></button>
         </div>
@@ -514,10 +121,9 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
-        <div class="span4 column2">
-        </div>
+        <div class="span4 column2 hidden-phone"></div>
         <div class="span4 column3">
           <button type="button" class="span12 delete btn">Löschen</button>
         </div>
@@ -529,10 +135,9 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
-        <div class="span4 column2">
-        </div>
+        <div class="span4 column2 hidden-phone"></div>
         <div class="span4 column3">
           <input type="text" class="span12" value="<%= this.value %>"/>
           <div class="placeholder"></div>
@@ -545,7 +150,7 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
         <div class="span8 column2">
           <textarea rows="10" class="span12 btn"><%= this.value %></textarea>
@@ -559,9 +164,9 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
-        <div class="span4 column3">
+        <div class="span4 column3 hidden-phone">
         </div>
         <div class="span4 column3">
           <input type="checkbox" checked="<%= this.state %>"/>
@@ -575,10 +180,9 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
-        <div class="span4 column2">
-        </div>
+        <div class="span4 column2 hidden-phone"></div>
         <select class="span4 column3"></select>
       </div>
     ]]>
@@ -588,7 +192,7 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
         <div class="span4 column2">
           <div class="input-append span12">
@@ -608,7 +212,7 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
         <div class="span4 column2">
           <ol class="span12 unstyled reorder-list"></ol>
@@ -625,7 +229,7 @@
    <![CDATA[
       <div class="row-fluid">
         <div class="span4 column1">
-          <span class="span12"><%= this.label %></span>
+          <span><%= this.label %></span>
         </div>
         <div class="span4 column2">
           <div class="slider-input"></div>
@@ -741,6 +345,19 @@
   <script>
     $(function() {
       new InterfaceCreator($("#app"), new ServerConnection());
+    });
+
+    $("#phonemenu-btn").click(function() {
+      $("#phonemenu-dd").toggle();
+    });
+
+    $("#phonemenu-dd a").click(function() {
+      $("#phonemenu-dd").hide();
+    });
+
+    $(".logoutbtn").click(function() {
+      $.cookie("bs_session", "");
+      location.reload();
     });
   </script>
 </body>
