display only matching servers

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
               <div class="span2"><span>Skript Paket</span></div>
               <select name="package" class="span4"></select>
               <div class="span2"><span>Server</span></div>
-              <select name="server" class="span4"></select>
+              <span id="serverinput-container">
+                <span class="span4 hide">dummy element to trick bootstraps :first-child stuff</span>
+              </span>
             </div>
             <div class="row-fluid">
               <div class="span2"><span>Proxies</span></div>
