--- a/index.html
+++ b/index.html
@@ -46,48 +46,75 @@
     <div id="app">
       <div id="staticpanels">
         <div class="widgetcontainer row-fluid" data-panelid="createbot" style="display: none">
-          <div class="span9">
-            <div class="row-fluid">
-              <div class="span2"><span>Spielername</span></div>
-              <input name="playername" class="span4" type="text">
-              <div class="span2"><span>Passwort</span></div>
-              <input name="password" class="span4" type="password">
-            </div>
-            <div class="row-fluid">
-              <div class="span2"><span>Skript Paket</span></div>
-              <select name="package" class="span4"></select>
-              <div class="span2"><span>Server</span></div>
-              <span id="serverinput-container">
-                <span class="span4 hide">dummy element to trick bootstraps :first-child stuff</span>
-              </span>
-            </div>
-            <div class="row-fluid">
-              <div class="span2"><span>Proxies</span></div>
-              <textarea name="proxies" class="span10 btn" rows="10" placeholder="Proxyliste hier einfügen"></textarea>
-            </div>
-            <div class="row-fluid">
-              <button name="submit" type="button" class="offset9 btn span3">Bot anlegen</sbutton>
-            </div>
-            <div id="createbot_log" class="row-fluid"></div>
-          </div>
-          <div class="span3">
-              <span>Ein sehr nützlicher Text, der z.B. Informationen über Proxies und andere Einstellungen gibt.</span>
-          </div>
-        </div>
-        <div class="widgetcontainer row-fluid" data-panelid="login" style="display: block">
-          <div class="span9">
-            <div class="row-fluid">
-              <div class="span2"><span>Nutzername</span></div>
-              <input name="username" class="span4" type="text" />
-              <div class="span2"><span>Passwort</span></div>
-              <input name="password" class="span4" type="password" />
-            </div>
-            <div class="row-fluid">
-              <button name="submit" type="button" class="offset9 btn span3">Anmelden</button>
+          <div class="row-fluid visible-phone">
+            <div class="span12">
+              <script type="text/javascript"><!--
+              google_ad_client = "ca-pub-4218787749702756";
+              /* mobil-breit */
+              google_ad_slot = "1375536220";
+              google_ad_width = 160;
+              google_ad_height = 600;
+              //-->
+              </script>
+              <script type="text/javascript"
+              src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+              </script>
             </div>
           </div>
-          <div class="span3">
-              <span>Ein sehr nützlicher Text, der z.B. Informationen über Proxies und andere Einstellungen gibt.</span>
+          <div class="row-fluid">
+            <div class="span9">
+              <div class="row-fluid">
+                <div class="span2"><span>Spielername</span></div>
+                <input name="playername" class="span4" type="text">
+                <div class="span2"><span>Passwort</span></div>
+                <input name="password" class="span4" type="password">
+              </div>
+              <div class="row-fluid">
+                <div class="span2"><span>Skript Paket</span></div>
+                <select name="package" class="span4"></select>
+                <div class="span2"><span>Server</span></div>
+                <span id="serverinput-container">
+                  <span class="span4 hide">dummy element to trick bootstraps :first-child stuff</span>
+                </span>
+              </div>
+              <div class="row-fluid">
+                <div class="span2"><span>Proxies</span></div>
+                <textarea name="proxies" class="span10 btn" rows="10" placeholder="Proxyliste hier einfügen"></textarea>
+              </div>
+              <div class="row-fluid">
+                <button name="submit" type="button" class="offset9 btn span3">Bot anlegen</sbutton>
+              </div>
+              <div id="createbot_log" class="row-fluid"></div>
+            </div>
+            <div class="span3 hidden-phone">
+              <script type="text/javascript"><!--
+              google_ad_client = "ca-pub-4218787749702756";
+              /* mobil-hoch */
+              google_ad_slot = "8898803021";
+              google_ad_width = 120;
+              google_ad_height = 600;
+              //-->
+              </script>
+              <script type="text/javascript"
+              src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+              </script>
+            </div>
+          </div>
+          <div class="widgetcontainer row-fluid" data-panelid="login" style="display: block">
+            <div class="span9">
+              <div class="row-fluid">
+                <div class="span2"><span>Nutzername</span></div>
+                <input name="username" class="span4" type="text" />
+                <div class="span2"><span>Passwort</span></div>
+                <input name="password" class="span4" type="password" />
+              </div>
+              <div class="row-fluid">
+                <button name="submit" type="button" class="offset9 btn span3">Anmelden</button>
+              </div>
+            </div>
+            <div class="span3">
+                <span>Ein sehr nützlicher Text, der z.B. Informationen über Proxies und andere Einstellungen gibt.</span>
+            </div>
           </div>
         </div>
       </div>
@@ -348,6 +375,18 @@
     $(function() {
       new InterfaceCreator($("#app"), new ServerConnection());
     });
+  </script>
+
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-39804053-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
   </script>
 </body>
 </html>
