--- a/index.html
+++ b/index.html
@@ -43,25 +43,40 @@
       </div>
     </div>
     <div id="app">
+    <div class="row-fluid hidden-desktop" style="text-align: center">
+      <div class="span12">
+        <script type="text/javascript"><!--
+        google_ad_client = "ca-pub-4218787749702756";
+        /* mobil breit */
+        google_ad_slot = "2185470220";
+        google_ad_width = 468;
+        google_ad_height = 60;
+        //-->
+        </script>
+        <script type="text/javascript"
+        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        </script>
+      </div>
+    </div>
+    <div class="row-fluid visible-desktop" style="text-align: center">
+      <div class="span12">
+        <script type="text/javascript"><!--
+        google_ad_client = "ca-pub-4218787749702756";
+        /* leaderboard */
+        google_ad_slot = "1216452229";
+        google_ad_width = 728;
+        google_ad_height = 90;
+        //-->
+        </script>
+        <script type="text/javascript"
+        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        </script>
+      </div>
+    </div>
       <div id="staticpanels">
         <div class="widgetcontainer row-fluid" data-panelid="createbot" style="display: none">
-          <div class="row-fluid visible-phone">
-            <div class="span12">
-              <script type="text/javascript"><!--
-              google_ad_client = "ca-pub-4218787749702756";
-              /* mobil-breit */
-              google_ad_slot = "1375536220";
-              google_ad_width = 160;
-              google_ad_height = 600;
-              //-->
-              </script>
-              <script type="text/javascript"
-              src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-              </script>
-            </div>
-          </div>
           <div class="row-fluid">
-            <div class="span9">
+            <div class="span12">
               <div class="row-fluid">
                 <div class="span2"><span>Spielername</span></div>
                 <input name="playername" class="span4" type="text">
@@ -84,19 +99,6 @@
                 <button name="submit" type="button" class="offset9 btn span3">Bot anlegen</sbutton>
               </div>
               <div id="createbot_log" class="row-fluid"></div>
-            </div>
-            <div class="span3 hidden-phone">
-              <script type="text/javascript"><!--
-              google_ad_client = "ca-pub-4218787749702756";
-              /* mobil-hoch */
-              google_ad_slot = "8898803021";
-              google_ad_width = 120;
-              google_ad_height = 600;
-              //-->
-              </script>
-              <script type="text/javascript"
-              src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-              </script>
             </div>
           </div>
           <div class="widgetcontainer row-fluid" data-panelid="login" style="display: block">
