--- a/index.html
+++ b/index.html
@@ -122,15 +122,28 @@
     </div>
   </div>
 
-  <script src="js/jquery-1.8.3.js"></script>
-  <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquerymx-3.2.custom.js"></script>
-  <script src="js/jquery.jqote2.js"></script>
-  <script src="js/jquery.nicescroll.js"></script>
-  <script src="js/jquery.cookie.js"></script>
-  <script src="js/underscore.js"></script>
-  <script src="js/bot_ui.js"></script>
+  <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
+  <script type="text/javascript" src="js/jquery-ui-1.9.2.custom.min.js"></script>
+  <script type="text/javascript">
+    /*
+     * jQuery UI Touch Punch 0.2.2
+     *
+     * Copyright 2011, Dave Furfero
+     * Dual licensed under the MIT or GPL Version 2 licenses.
+     *
+     * Depends:
+     *  jquery.ui.widget.js
+     *  jquery.ui.mouse.js
+     */
+    (function(b){b.support.touch="ontouchend" in document;if(!b.support.touch){return;}var c=b.ui.mouse.prototype,e=c._mouseInit,a;function d(g,h){if(g.originalEvent.touches.length>1){return;}g.preventDefault();var i=g.originalEvent.changedTouches[0],f=document.createEvent("MouseEvents");f.initMouseEvent(h,true,true,window,1,i.screenX,i.screenY,i.clientX,i.clientY,false,false,false,false,0,null);g.target.dispatchEvent(f);}c._touchStart=function(g){var f=this;if(a||!f._mouseCapture(g.originalEvent.changedTouches[0])){return;}a=true;f._touchMoved=false;d(g,"mouseover");d(g,"mousemove");d(g,"mousedown");};c._touchMove=function(f){if(!a){return;}this._touchMoved=true;d(f,"mousemove");};c._touchEnd=function(f){if(!a){return;}d(f,"mouseup");d(f,"mouseout");if(!this._touchMoved){d(f,"click");}a=false;};c._mouseInit=function(){var f=this;f.element.bind("touchstart",b.proxy(f,"_touchStart")).bind("touchmove",b.proxy(f,"_touchMove")).bind("touchend",b.proxy(f,"_touchEnd"));e.call(f);};})(jQuery);
+  </script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/jquerymx-3.2.custom.js"></script>
+  <script type="text/javascript" src="js/jquery.jqote2.js"></script>
+  <script type="text/javascript" src="js/jquery.nicescroll.js"></script>
+  <script type="text/javascript" src="js/jquery.cookie.js"></script>
+  <script type="text/javascript" src="js/underscore.js"></script>
+  <script type="text/javascript" src="js/bot_ui.js"></script>
 
   <script type="text/x-jqote-template" id="tmpl_togglebtn">
    <![CDATA[
