--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </span>
       </div>
       <div id="selected-bot"></div>
-      <div id="logoutbtn" class="btn logoutbtn hidden-phone" style="min-width: 100px; width: 15%">
+      <div id="combobtn" class="btn logoutbtn hidden-phone" style="min-width: 100px; width: 15%">
         <i class="icon-signout"></i><span> Abmelden</span>
       </div>
       <span id="phonemenu-btn" class="visible-phone btn pull-right">
@@ -78,49 +78,69 @@
     </div>
       <div id="staticpanels">
         <div class="widgetcontainer row-fluid" data-panelid="account" style="display: none">
-          <div class="row-fluid">
+          <div class="row-fluid" data-formid="email">
             <div class="span12">
               <div class="row-fluid">
                 <h4 class="span12">E-Mail</h4>
               </div>
               <div class="row-fluid">
-                <span class="span3">Aktuelle E-Mail Adresse:</span><span class="span9" id="current-email">dummy@fake.org</span>
+                <span class="span3">Aktuelle E-Mail Adresse:</span><span class="span9" id="current-email"></span>
               </div>
               <div class="row-fluid">
                 <span class="span3">Neue E-Mail Adresse:</span><input type="text" class="span3" name="new-email"></span>
                 <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3" name="confirm-pw-email"></span>
               </div>
               <div class="row-fluid">
-                <button type="button" class="span4 pull-right btn">E-Mail Adresse ändern</button>
+                <button name="update-email" type="button" class="span4 pull-right btn">E-Mail Adresse ändern</button>
               </div>
             </div>
           </div>
-          <div class="row-fluid">
+          <div class="row-fluid" data-formid="password">
             <div class="span12">
               <div class="row-fluid">
                 <h4 class="span12">Passwort</h4>
               </div>
               <div class="row-fluid">
-                <span class="span3">Neues Passwort:</span><input type="text" class="span3"></span>
-                <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3"></span>
+                <span class="span3">Neues Passwort:</span><input type="text" class="span3" name="new-pw"></span>
+                <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3" name="confirm-pw-pw"></span>
               </div>
               <div class="row-fluid">
-                <button type="button" class="span4 pull-right btn">Passwort ändern</button>
+                <button name="update-password" type="button" class="span4 pull-right btn">Passwort ändern</button>
               </div>
             </div>
-          <div class="row-fluid">
+          <div class="row-fluid" data-formid="delete_acc">
             <div class="span12">
               <div class="row-fluid">
                 <h4 class="span12">Account Löschen</h4>
               </div>
               <div class="row-fluid">
-                <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3"></span>
+                <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3" name="confirm-pw-delete"></span>
               </div>
               <div class="row-fluid">
-                <button type="button" class="span4 pull-right btn">Account unwideruflich löschen</button>
+                <button name="delete-account" type="button" class="span4 pull-right btn">Account unwideruflich löschen</button>
               </div>
             </div>
           </div>
+          </div>
+        </div>
+        <div class="widgetcontainer row-fluid" data-panelid="createaccount" style="display: none">
+          <div class="row-fluid">
+            <div class="span12">
+              <div class="row-fluid">
+                <h4 class="span12">Account registirieren</h4>
+              </div>
+              <div class="row-fluid">
+                <span class="span3">Nutzername:</span><input name="username" type="text" class="span3"></span>
+                <span class="span3">Email Adresse:</span><input name="email" type="email" class="span3"></span>
+              </div>
+              <div class="row-fluid">
+                <span class="span3">Passwort:</span><input name="password" type="password" class="span3"></span>
+                <span class="span3">Passwort bestätigen:</span><input name="passwordconfirm" type="password" class="span3"></span>
+              </div>
+              <div class="row-fluid">
+                <button name="createaccount" type="button" class="span4 pull-right btn">Account erstellen</button>
+              </div>
+            </div>
           </div>
         </div>
         <div class="widgetcontainer row-fluid" data-panelid="createbot" style="display: none">
@@ -150,20 +170,20 @@
               <div id="createbot_log" class="row-fluid"></div>
             </div>
           </div>
-          <div class="widgetcontainer row-fluid" data-panelid="login" style="display: none">
-            <div class="span9">
-              <div class="row-fluid">
-                <div class="span2"><span>Nutzername</span></div>
-                <input name="username" class="span4" type="text" />
-                <div class="span2"><span>Passwort</span></div>
-                <input name="password" class="span4" type="password" />
-              </div>
-              <div class="row-fluid">
-                <button name="submit" type="button" class="offset9 btn span3">Anmelden</button>
-              </div>
+        </div>
+        <div class="widgetcontainer row-fluid" data-panelid="login" style="display: block">
+          <div class="span12">
+            <div class="row-fluid">
+              <h4 class="span12">Login</h4>
             </div>
-            <div class="span3">
-                <span>Ein sehr nützlicher Text, der z.B. Informationen über Proxies und andere Einstellungen gibt.</span>
+            <div class="row-fluid">
+              <div class="span2"><span>Nutzername</span></div>
+              <input name="username" class="span4" type="text" />
+              <div class="span2"><span>Passwort</span></div>
+              <input name="password" class="span4" type="password" />
+            </div>
+            <div class="row-fluid">
+              <button name="submit" type="button" class="offset9 btn span3">Anmelden</button>
             </div>
           </div>
         </div>
