float button right

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </span>
       </div>
       <div id="selected-bot"></div>
-      <div id="combobtn" class="btn logoutbtn hidden-phone" style="min-width: 100px; width: 15%">
+      <div id="combobtn" class="btn logoutbtn hidden-phone">
         <i class="icon-signout"></i><span> Abmelden</span>
       </div>
       <span id="phonemenu-btn" class="visible-phone btn pull-right">
