replace jquery ui slider with html5 range input

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
           <span><%= this.label %></span>
         </div>
         <div class="span4 column2">
-          <div class="slider-input"></div>
+          <input class="slider-input" type="range" value="<%= this.value %>" min="<%= this.min %>" max="<%= this.max %>" step="<%= this.step %>">
           <div class="placeholder"></div>
         </div>
         <div class="span4 column3">
