--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
         </script>
       </div>
     </div>
-    <div class="row-fluid" id="message-area">
-
-    </div>
+    <div class="row-fluid" id="message-area"></div>
       <div id="staticpanels">
         <div class="widgetcontainer row-fluid" data-panelid="account" style="display: none">
           <div class="row-fluid" data-formid="email">
@@ -219,6 +217,17 @@
       <div class="row-fluid">
         <div class="span12 message success">
           <span><i class="icon-ok-sign"> </i><%= this.text %></span>
+          <span><i class="pull-right icon-remove"></i></span>
+        </div>
+      </div>
+    ]]>
+  </script>
+
+  <script type="text/x-jqote-template" id="tmpl_infomessage">
+   <![CDATA[
+      <div class="row-fluid">
+        <div class="span12 message info">
+          <span><i class="icon-info-sign"> </i><%= this.text %></span>
           <span><i class="pull-right icon-remove"></i></span>
         </div>
       </div>
