change password input to password type

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <span class="span3">Aktuelle E-Mail Adresse:</span><span class="span9" id="current-email"></span>
               </div>
               <div class="row-fluid">
-                <span class="span3">Neue E-Mail Adresse:</span><input type="text" class="span3" name="new-email"></span>
+                <span class="span3">Neue E-Mail Adresse:</span><input type="password" class="span3" name="new-email"></span>
                 <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3" name="confirm-pw-email"></span>
               </div>
               <div class="row-fluid">
