--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
           <i class="icon-caret-down"></i>
         </span>
       </div>
-      <div id="combobtn" class="btn logoutbtn">
+      <div id="combobtn" class="btn rightbtn">
         <i class="icon-signout"></i><span> Abmelden</span>
+      </div>
+      <div id="accountbtn" class="btn rightbtn">
+        <i class="icon-user"></i><span> Account</span>
       </div>
       <div id="selected-bot"></div>
     </div>
@@ -71,7 +74,7 @@
                 <span class="span3">Aktuelle E-Mail Adresse:</span><span class="span9" id="current-email"></span>
               </div>
               <div class="row-fluid">
-                <span class="span3">Neue E-Mail Adresse:</span><input type="password" class="span3" name="new-email"></span>
+                <span class="span3">Neue E-Mail Adresse:</span><input type="text" class="span3" name="new-email"></span>
                 <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3" name="confirm-pw-email"></span>
               </div>
               <div class="row-fluid">
@@ -85,13 +88,14 @@
                 <h4 class="span12">Passwort</h4>
               </div>
               <div class="row-fluid">
-                <span class="span3">Neues Passwort:</span><input type="text" class="span3" name="new-pw"></span>
+                <span class="span3">Neues Passwort:</span><input type="password" class="span3" name="new-pw"></span>
                 <span class="span3">Aktuelles Passwort:</span><input type="password" class="span3" name="confirm-pw-pw"></span>
               </div>
               <div class="row-fluid">
                 <button name="update-password" type="button" class="span4 pull-right btn">Passwort ändern</button>
               </div>
             </div>
+          </div>
           <div class="row-fluid" data-formid="delete_acc">
             <div class="span12">
               <div class="row-fluid">
@@ -104,7 +108,6 @@
                 <button name="delete-account" type="button" class="span4 pull-right btn">Account unwideruflich löschen</button>
               </div>
             </div>
-          </div>
           </div>
         </div>
         <div class="widgetcontainer row-fluid" data-panelid="createaccount" style="display: none">
