textarea widget (proxy input) with set button resolves #6

--- a/index.html
+++ b/index.html
@@ -285,6 +285,14 @@
         </div>
         <div class="span8 column2">
           <textarea rows="10" class="span12 btn"><%= this.value %></textarea>
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="span4 column1">
+        </div>
+        <div class="span4 column2 hidden-phone"></div>
+        <div class="span4 column3">
+          <button type="button" class="span12 btn"><%= this.label %> <%= this.btn_text %></button>
           <div class="placeholder"></div>
         </div>
       </div>
