--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://makielski.net/" />
+  <meta http-equiv="refresh" content="0; url=https://bot.makielski.net/" />
 </head>
 <body>
 </body>
